--- a/tests/test_cases/2021/commands/7E0.7E8.2214F7.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2214F7.yaml
@@ -7,8 +7,14 @@ test_cases:
     VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 103.3
   response: 7E8056214F70EB4
 - expected_values:
+    VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 149.4
+  response: 7E8056214F71081
+- expected_values:
     VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 159.6
   response: 7E8056214F710E7
+- expected_values:
+    VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 172.4
+  response: 7E8056214F71167
 - expected_values:
     VOLKSWAGEN_PQ35_EXHAUST_GAS_T_SENSOR_2: 190.5
   response: 7E8056214F7121C
