--- a/tests/test_cases/2021/commands/7E0.7E8.221798.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221798.yaml
@@ -16,6 +16,12 @@ test_cases:
     VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 44.7
   response: 7E8056217980C6A
 - expected_values:
+    VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 49.9
+  response: 7E8056217980C9E
+- expected_values:
+    VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 51.8
+  response: 7E8056217980CB1
+- expected_values:
     VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 55.7
   response: 7E8056217980CD8
 - expected_values:
