--- a/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
@@ -4,11 +4,17 @@ test_cases:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 9700000
   response: 7E80562181A0F28
 - expected_values:
+    VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 9702500
+  response: 7E80562181A0F29
+- expected_values:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 9800000
   response: 7E80562181A0F50
 - expected_values:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 10757500
   response: 7E80562181A10CF
+- expected_values:
+    VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 10842500
+  response: 7E80562181A10F1
 - expected_values:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 12070000
   response: 7E80562181A12DC
