--- a/tests/test_cases/2021/commands/7E0.7E8.222609.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222609.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.222609
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_CALCULATED: 5.96
+  response: '7E8056226090254'
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_CALCULATED: 6.19
+  response: 7E805622609026B
+- expected_values:
     VOLKSWAGEN_MQB_DPF_SOOT_MASS_CALCULATED: 21.38
   response: 7E805622609085A
 - expected_values:
