--- a/tests/test_cases/2021/commands/7E1.7E9.22100F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22100F.yaml
@@ -1,11 +1,20 @@
 command_id: 7E1.7E9.22100F
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LOSS: 39
+  response: 7E90562100F0C03
+- expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LOSS: 52
   response: 7E90562100F1004
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LOSS: 40
+  response: 7E90562100F2003
+- expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LOSS: 41
   response: 7E90562100F3403
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LOSS: 30
+  response: 7E90562100F5802
 - expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LOSS: 33
   response: 7E90562100F9402
