--- a/tests/test_cases/2021/commands/7E1.7E9.221091.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221091.yaml
@@ -15,3 +15,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.29
   response: 7E9056210911BFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.25
+  response: 7E9056210911FFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.23
+  response: 7E90562109121FF
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G2: -2.18
+  response: 7E90562109126FF
