--- a/tests/test_cases/2021/commands/7E1.7E9.2210A0.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A0.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.06
   response: 7E9056210A0FAFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.05
+  response: 7E9056210A0FBFF
+- expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_C_ADAPT_NEUTRALPOS: -0.04
   response: 7E9056210A0FCFF
