--- a/tests/test_cases/2021/commands/7E1.7E9.2210AC.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AC.yaml
@@ -4,8 +4,17 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.16
   response: 7E9056210AC9403
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.17
+  response: 7E9056210AC9503
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.19
   response: 7E9056210AC9703
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.2
+  response: 7E9056210AC9803
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.21
+  response: 7E9056210AC9903
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G6: 9.25
   response: 7E9056210AC9D03
