--- a/tests/test_cases/2021/commands/7E1.7E9.221110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221110.yaml
@@ -1,11 +1,20 @@
 command_id: 7E1.7E9.221110
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_WORKING_HOURS: 1763.52
+  response: 7E90762111000A7EB12
+- expected_values:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.95401
   response: 7E9076211100A19EA12
 - expected_values:
+    VOLKSWAGEN_PQ35_WORKING_HOURS: 1763.43617
+  response: 7E9076211100E6CEB12
+- expected_values:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.42391
   response: 7E90762111050A4E812
+- expected_values:
+    VOLKSWAGEN_PQ35_WORKING_HOURS: 1763.47497
+  response: 7E9076211105787EB12
 - expected_values:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1762.50649
   response: 7E90762111061DEE812
