--- a/tests/test_cases/2021/commands/7E1.7E9.22380A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380A.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22380A
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1539
+  response: 7E90562380A0306
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 786
   response: 7E90562380A1203
 - expected_values:
@@ -10,11 +13,17 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1181
   response: 7E90562380A9D04
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 975
+  response: 7E90562380ACF03
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1745
   response: 7E90562380AD106
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1524
   response: 7E90562380AF405
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 757
+  response: 7E90562380AF502
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_INPUT_SPD_7E1_380A: 1275
   response: 7E90562380AFB04
