--- a/tests/test_cases/2021/commands/7E1.7E9.22380E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380E.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_1: 0
   response: 7E90562380E0000
 - expected_values:
+    VOLKSWAGEN_MQB_OUTPUT_SHAFT_1: 285
+  response: 7E90562380E1D01
+- expected_values:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_1: 286
   response: 7E90562380E1E01
 - expected_values:
