--- a/tests/test_cases/2021/commands/7E1.7E9.22381D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22381D.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22381D
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 0.22
+  response: 7E90562381D1600
+- expected_values:
     VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 8.97
   response: 7E90562381D8103
 - expected_values:
@@ -15,6 +18,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.21
   response: 7E90562381DA501
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.26
+  response: 7E90562381DAA01
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.4
+  response: 7E90562381DB801
 - expected_values:
     VOLKSWAGEN_MQB_TCM_EOP_ACTUAL: 4.78
   response: 7E90562381DDE01
