--- a/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
@@ -10,5 +10,14 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 374.2
   response: 7E9056238269E0E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 380.6
+  response: 7E905623826DE0E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 1200
   response: 7E905623826E02E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 381.4
+  response: 7E905623826E60E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 382.3
+  response: 7E905623826EF0E
