--- a/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 369.5
   response: 7E9056238346F0E
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 421.8
+  response: 7E9056238347A10
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 554.4
   response: 7E905623834A815
 - expected_values:
