--- a/tests/test_cases/2021/commands/7E1.7E9.223839.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223839.yaml
@@ -13,5 +13,8 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: -94.15
   response: 7E905623839A5F8
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: 50.7
+  response: 7E905623839F603
+- expected_values:
     VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: -13
   response: 7E905623839FCFE
