--- a/tests/test_cases/2021/commands/7E1.7E9.22386A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22386A.yaml
@@ -7,8 +7,14 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0.06
   response: 7E90562386A0600
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0
+  response: 7E90562386A7CFC
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 9.4
   response: 7E90562386AAC03
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 9.41
+  response: 7E90562386AAD03
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 9.44
   response: 7E90562386AB003
@@ -18,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0
   response: 7E90562386AFBFF
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_D: 0
+  response: 7E90562386AFFFF
