--- a/tests/test_cases/2021/commands/7E0.22162F|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22162F|din=03.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.22162F|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 0
+  response: 7E80562162F0000
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 1
+  response: 7E80562162F0001
+- expected_values:
     VOLKSWAGEN_MQB_DPF_AIR_P_SENSOR_RAW_VALUE: 7
   response: 7E80562162F0007
 - expected_values:
