--- a/tests/test_cases/2021/commands/7E0.22269B|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22269B|din=03.yaml
@@ -4,11 +4,17 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_2: 8
   response: 7E80562269B0008
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_2: 12
+  response: 7E80562269B000C
+- expected_values:
     VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_2: 16
   response: 7E80562269B0010
 - expected_values:
     VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_2: 20
   response: 7E80562269B0014
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_2: 44
+  response: 7E80562269B002C
 - expected_values:
     VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_2: 48
   response: 7E80562269B0030
