--- a/tests/test_cases/2021/commands/7E0.7E8.22103C.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22103C.yaml
@@ -4,6 +4,12 @@ test_cases:
     VOLKSWAGEN_MQB_INT_MAN_P: 825
   response: 7E80562103C0339
 - expected_values:
+    VOLKSWAGEN_MQB_INT_MAN_P: 917
+  response: 7E80562103C0395
+- expected_values:
+    VOLKSWAGEN_MQB_INT_MAN_P: 961
+  response: 7E80562103C03C1
+- expected_values:
     VOLKSWAGEN_MQB_INT_MAN_P: 1000
   response: 7E80562103C03E8
 - expected_values:
