--- a/tests/test_cases/2021/commands/7E0.7E8.221069.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221069.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_PQ35_ENG_START_QTY: 16.01
   response: '7E8056210690641'
 - expected_values:
+    VOLKSWAGEN_PQ35_ENG_START_QTY: 16.36
+  response: '7E8056210690664'
+- expected_values:
     VOLKSWAGEN_PQ35_ENG_START_QTY: 21.65
   response: '7E8056210690875'
