--- a/tests/test_cases/2021/commands/7E0.7E8.22117E.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22117E.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 79.49
   response: 7E80562117E1F0D
 - expected_values:
+    VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 79.7
+  response: 7E80562117E1F22
+- expected_values:
     VOLKSWAGEN_PQ35_TURB_ACT_1_B1: 80.5
   response: 7E80562117E1F72
 - expected_values:
