--- a/tests/test_cases/2021/commands/7E0.7E8.2211E6.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211E6.yaml
@@ -7,11 +7,17 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_EXH_VOL: 47.5
   response: 7E8056211E601DB
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_EXH_VOL: 68.9
+  response: 7E8056211E602B1
+- expected_values:
     VOLKSWAGEN_MQB_DPF_EXH_VOL: 79.8
   response: 7E8056211E6031E
 - expected_values:
     VOLKSWAGEN_MQB_DPF_EXH_VOL: 88.6
   response: 7E8056211E60376
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_EXH_VOL: 125.9
+  response: 7E8056211E604EB
 - expected_values:
     VOLKSWAGEN_MQB_DPF_EXH_VOL: 134.2
   response: 7E8056211E6053E
