--- a/tests/test_cases/2021/commands/7E0.7E8.2212FE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2212FE.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CAMS_ADAPT_PHASE_1: 0
   response: 7E8056212FE0000
 - expected_values:
+    VOLKSWAGEN_PQ35_CAMS_ADAPT_PHASE_1: -0.62
+  response: 7E8056212FEFFE1
+- expected_values:
     VOLKSWAGEN_PQ35_CAMS_ADAPT_PHASE_1: -0.26
   response: 7E8056212FEFFF3
