--- a/tests/test_cases/2021/commands/7E0.7E8.221313.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221313.yaml
@@ -10,6 +10,12 @@ test_cases:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 7.3
   response: '7E8056213130049'
 - expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 9.3
+  response: 7E805621313005D
+- expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 9.8
+  response: '7E8056213130062'
+- expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_FLOW: 12.8
   response: '7E8056213130080'
 - expected_values:
