--- a/tests/test_cases/2021/commands/7E0.7E8.221813.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221813.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 0
   response: '7E8056218130000'
 - expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 14.5
+  response: '7E8056218130091'
+- expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 18.5
   response: 7E80562181300B9
 - expected_values:
@@ -21,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 36.4
   response: 7E805621813016C
+- expected_values:
+    VOLKSWAGEN_MQB_EGR_VALVE_1_B1_MASS_I_SPEC: 36.5
+  response: 7E805621813016D
