--- a/tests/test_cases/2021/commands/7E0.7E8.221ABE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ABE.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.221ABE
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -8.6
+  response: 7E805621ABEFCA4
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -8.59
+  response: 7E805621ABEFCA5
+- expected_values:
     VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -2.98
   response: 7E805621ABEFED6
 - expected_values:
