--- a/tests/test_cases/2021/commands/7E0.7E8.221AC1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC1.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.7E8.221AC1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_FUEL_CONSUMPTION_SINCE_LAST_REGEN: 0.21
+  response: 7E805621AC10015
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_FUEL_CONSUMPTION_SINCE_LAST_REGEN: 0.28
+  response: 7E805621AC1001C
+- expected_values:
     VOLKSWAGEN_MQB_DPF_FUEL_CONSUMPTION_SINCE_LAST_REGEN: 9.53
   response: 7E805621AC103B9
 - expected_values:
