--- a/tests/test_cases/2021/commands/7E0.7E8.221AD5.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD5.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 1.667
   response: 7E805621AD50683
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 1.678
+  response: 7E805621AD5068E
+- expected_values:
     VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 1.812
   response: 7E805621AD50714
 - expected_values:
@@ -21,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 2.262
   response: 7E805621AD508D6
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_INLET_LAMBDA_VALUE: 2.892
+  response: 7E805621AD50B4C
