--- a/tests/test_cases/2021/commands/7E0.7E8.222AE1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222AE1.yaml
@@ -13,11 +13,17 @@ test_cases:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 20.7
   response: 7E805622AE11457
 - expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 24.3
+  response: 7E805622AE1147B
+- expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 31.4
   response: 7E805622AE114C2
 - expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 36.2
   response: 7E805622AE114F2
+- expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 49.5
+  response: 7E805622AE11577
 - expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 52
   response: 7E805622AE11590
