--- a/tests/test_cases/2021/commands/7E0.7E8.222AE2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222AE2.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 0.8
   response: 7E805622AE21390
+- expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_SIMULATED: 2.7
+  response: 7E805622AE213A3
