--- a/tests/test_cases/2021/commands/7E1.7E9.221009.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221009.yaml
@@ -10,11 +10,17 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 613
   response: '7E9056210096502'
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 122
+  response: 7E9056210097A00
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 141
   response: 7E9056210098D00
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 183
   response: 7E905621009B700
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 219
+  response: 7E905621009DB00
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 481
   response: 7E905621009E101
