--- a/tests/test_cases/2021/commands/7E1.7E9.22100C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22100C.yaml
@@ -10,11 +10,20 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 40
   response: 7E90562100C2003
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 69
+  response: 7E90562100C6405
+- expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 186
   response: 7E90562100C880E
 - expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 149
   response: 7E90562100CA40B
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 89
+  response: 7E90562100CF406
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 230
+  response: 7E90562100CF811
 - expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE: 115
   response: 7E90562100CFC08
