--- a/tests/test_cases/2021/commands/7E1.7E9.22100E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22100E.yaml
@@ -10,8 +10,17 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 297
   response: 7E90562100E3417
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 285
+  response: 7E90562100E4416
+- expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 337
   response: 7E90562100E541A
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 235
+  response: 7E90562100E5C12
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 200
+  response: 7E90562100EA00F
 - expected_values:
     VOLKSWAGEN_MQB_TCM_ENGINE_TORQUE_LIMITATION: 343
   response: 7E90562100ECC1A
