--- a/tests/test_cases/2021/commands/7E1.7E9.221010.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221010.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: 422.4
   response: '7E9056210102100'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: 460.8
+  response: '7E9056210102400'
+- expected_values:
     VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: 678.4
   response: '7E9056210103500'
 - expected_values:
@@ -15,3 +18,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: -1267.15
   response: 7E9056210109D01
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: -665.5
+  response: 7E905621010CC02
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_CONVERTER_LOSS_TORQUE: -460.8
+  response: 7E905621010DC00
