--- a/tests/test_cases/2021/commands/7E1.7E9.221017.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221017.yaml
@@ -4,6 +4,15 @@ test_cases:
     VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -3.463
   response: '7E90462101771'
 - expected_values:
+    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -3.214
+  response: '7E90462101772'
+- expected_values:
+    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -1.72
+  response: '7E90462101778'
+- expected_values:
+    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -1.471
+  response: '7E90462101779'
+- expected_values:
     VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -1.222
   response: 7E9046210177A
 - expected_values:
