--- a/tests/test_cases/2021/commands/7E1.7E9.22102B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22102B.yaml
@@ -13,6 +13,15 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_1_T: 33
   response: 7E90562102B2100
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_T: 48
+  response: 7E90562102B3000
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_T: 56
+  response: 7E90562102B3800
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_T: 58
+  response: 7E90562102B3A00
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_T: 67
   response: 7E90562102B4300
 - expected_values:
