--- a/tests/test_cases/2021/commands/7E1.7E9.22102C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22102C.yaml
@@ -10,6 +10,15 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_T: 29
   response: 7E90562102C1D00
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 47
+  response: 7E90562102C2F00
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 55
+  response: 7E90562102C3700
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_T: 57
+  response: 7E90562102C3900
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_T: 67
   response: 7E90562102C4300
 - expected_values:
