--- a/tests/test_cases/2021/commands/7E1.7E9.221070.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221070.yaml
@@ -7,6 +7,12 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.25
   response: '7E9056210700104'
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.17
+  response: 7E905621070F903
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.18
+  response: 7E905621070FA03
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_2_POS: 10.19
   response: 7E905621070FB03
 - expected_values:
