--- a/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221085.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.221085
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 1.97
+  response: 7E905621085C500
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 1.99
+  response: 7E905621085C700
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G3: 2.01
   response: 7E905621085C900
 - expected_values:
