--- a/tests/test_cases/2021/commands/7E1.7E9.221092.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221092.yaml
@@ -18,3 +18,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.17
   response: 7E905621092EFFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.13
+  response: 7E905621092F3FF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.12
+  response: 7E905621092F4FF
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_B_ADAPT_NEUTRALPOS: -0.1
+  response: 7E905621092F6FF
