--- a/tests/test_cases/2021/commands/7E1.7E9.221094.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221094.yaml
@@ -10,5 +10,11 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.67
   response: 7E905621094C703
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.7
+  response: 7E905621094CA03
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.74
+  response: 7E905621094CE03
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_ENGAGED_POS_G4: 9.86
   response: 7E905621094DA03
