--- a/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AD.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.75
   response: 7E9056210ADAF00
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G6: 1.79
+  response: 7E9056210ADB300
