--- a/tests/test_cases/2021/commands/7E1.7E9.22380C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380C.yaml
@@ -1,11 +1,17 @@
 command_id: 7E1.7E9.22380C
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_INPUT_SHAFT_1: 0
+  response: 7E90562380C0000
+- expected_values:
     VOLKSWAGEN_MQB_INPUT_SHAFT_1: 1400
   response: 7E90562380C7805
 - expected_values:
     VOLKSWAGEN_MQB_INPUT_SHAFT_1: 636
   response: 7E90562380C7C02
+- expected_values:
+    VOLKSWAGEN_MQB_INPUT_SHAFT_1: 1150
+  response: 7E90562380C7E04
 - expected_values:
     VOLKSWAGEN_MQB_INPUT_SHAFT_1: 1423
   response: 7E90562380C8F05
@@ -18,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_INPUT_SHAFT_1: 740
   response: 7E90562380CE402
+- expected_values:
+    VOLKSWAGEN_MQB_INPUT_SHAFT_1: 1013
+  response: 7E90562380CF503
