--- a/tests/test_cases/2021/commands/7E1.7E9.22380F.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22380F.yaml
@@ -7,8 +7,14 @@ test_cases:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 5120
   response: 7E90562380F1400
 - expected_values:
+    VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 6145
+  response: 7E90562380F1801
+- expected_values:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 20225
   response: 7E90562380F4F01
 - expected_values:
     VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: 30721
   response: 7E90562380F7801
+- expected_values:
+    VOLKSWAGEN_MQB_OUTPUT_SHAFT_2: -26368
+  response: 7E90562380F9900
