--- a/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
@@ -4,8 +4,14 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 6.24
   response: '7E9056238247002'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 1.22
+  response: 7E9056238247A00
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 3.89
   response: '7E9056238248501'
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 9.3
+  response: 7E905623824A203
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 4.24
   response: 7E905623824A801
