--- a/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.22382A
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 365.4
+  response: 7E90562382A460E
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 365.8
+  response: 7E90562382A4A0E
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 1200
   response: 7E90562382AE02E
 - expected_values:
