--- a/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 5
   response: 7E90562382E6400
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 60.3
+  response: 7E90562382EB604
