--- a/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223838.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.223838
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: 0
+  response: '7E9056238380000'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_2: -100
   response: 7E90562383830F8
 - expected_values:
