--- a/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383D.yaml
@@ -1,8 +1,14 @@
 command_id: 7E1.7E9.22383D
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 0
+  response: 7E90562383D0000
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 359.4
   response: 7E90562383D0A0E
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 411.9
+  response: 7E90562383D1710
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_SPECIFIED: 364.3
   response: 7E90562383D3B0E
