--- a/tests/test_cases/2021/commands/7E1.7E9.22383E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22383E.yaml
@@ -7,8 +7,14 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 390
   response: 7E90562383E3C0F
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 341
+  response: 7E90562383E520D
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 399
   response: 7E90562383E960F
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 42
+  response: 7E90562383EA401
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_2_VALVE_I_ACTUAL: 376
   response: 7E90562383EB00E
