--- a/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22385A.yaml
@@ -7,8 +7,17 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0.03
   response: 7E90562385A0300
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0.05
+  response: 7E90562385A0500
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0.1
+  response: 7E90562385A0A00
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0.11
   response: 7E90562385A0B00
+- expected_values:
+    VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
+  response: 7E90562385A0DFC
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_ACUTAL_POS_GEAR_POSER_B: 0
   response: 7E90562385AFEFF
