--- a/tests/test_cases/2021/commands/7E1.7E9.223871.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223871.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 0
   response: '7E9056238710000'
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 260
+  response: '7E9056238710401'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 440
   response: 7E905623871B801
 - expected_values:
