--- a/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 488
   response: 7E90562388CE801
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 489
+  response: 7E90562388CE901
