--- a/tests/test_cases/2021/commands/7E1.7E9.2238EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238EA.yaml
@@ -13,8 +13,14 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 0.1
   response: 7E9056238EA0A00
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 0.11
+  response: 7E9056238EA0B00
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 4
   response: 7E9056238EA9001
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 4.15
   response: 7E9056238EA9F01
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 2.52
+  response: 7E9056238EAFC00
